fixed animated underline on mobile and changed nav button color

--- a/css/responsive-nav.css
+++ b/css/responsive-nav.css
@@ -195,14 +195,14 @@ header {
 
 .nav-collapse a:active,
 .nav-collapse .active a {
-  background: linear-gradient(0deg, rgba(76,76,76,1) 0%, rgba(19,19,19,1) 100%);
+  background: linear-gradient(0deg, rgba(153,23,6,1) 0%, rgba(82,0,0,1) 100%);
 }
 
 @media screen and (min-width: 40em) {
   .nav-collapse a {
     font-size: 18px;
     border-left: 1px solid white;
-    padding: 1.02em 1.8em;
+    padding: 1.02em 1.6em;
     text-align: center;
     border-top: 0;
     float: left;
